# attention-all-microbes

./: .dockerignore  .gitignore  =  Dockerfile  README.md  _dockerfile_current  _dockerfile_old  attention_cli.py  base_model.py  cli.py  docker-compose.yml  environment.yml  gotu.py  gotu_cli.py  jupyter scratch.ipynb  nuc-cli.py  nuc_cli.py  pyproject.toml  requirements.txt  sepsis.py  setup.py  shell_cheatsheet.sh  transfer_learning.py  unifrac_cli.py  util.py
.github/workflows/: docker-ci.yml  lint.yml  ruff.yml
aam/: __init__.py  _parameter_descriptions.py  attention_cli.py  callbacks.py  cli_util.py  cv_utils.py  data_utils.py  gotu_model.py  initializers.py  layers.py  losses.py  metrics.py  model.py  model_utils.py  model_utils_current.py  nuc_model.py  sequence_utils.py  test.py  test_data_utils.py  transfer_data_utils.py  transfer_nuc_model.py  types.py  unifrac_data_utils.py  unifrac_model.py  utils.py
aam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aam/.ipynb_checkpoints/: callbacks-checkpoint.py  data_utils-checkpoint.py  layers-checkpoint.py  losses-checkpoint.py  model_utils-checkpoint.py
aam/common/: callbacks.py  cli_util.py  data_utils.py  losses.py  metrics.py  model_utils.py  regression_data_utils.py
aam/data_handlers/: __init__.py  generator_dataset.py  sequence_dataset.py  sequence_generator_dataset.py  taxonomy_generator.py  unifrac_generator.py  unifrac_generator_dataset.py
aam/gotu/: gotu_model.py  gotu_preprocessing.py
aam/layers/encoders/: nucleotides.py
aam/models/: __init__.py  base_sequence_encoder.py  nuc_model.py  sequence_regressor.py  taxonomy_encoder.py  transformers.py  unifrac_encoder.py  unifrac_model.py  utils.py
aam/tests/: layers_test.py  test_data_utils.py
amplicon_gpt/: _parameter_descriptions.py  callbacks.py  data_utils.py  initializers.py  layers.py  losses.py  metrics.py  model_utils.py  models.py  test_data_utils.py
amplicon_gpt/.ipynb_checkpoints/: data_utils-checkpoint.py  layers-checkpoint.py  losses-checkpoint.py  model_utils-checkpoint.py  test_data_utils-checkpoint.py
amplicon_gpt/tests/: layers_test.py
attention_regression/: callbacks.py  data_utils.py  layers.py  losses.py  model.py
gotu/: gotu.py  gotu_callback.py  gotu_data_utils.py  gotu_model.py  gotu_plots.py  gotu_preprocessing.py  old_gotu_funcs.py  translator.py
sepsis/: callbacks.py  data_utils.py  layers.py  losses.py  metrics.py  model.py
shu-aging/: base-configure .json  gut-configure.json  oral_2550.biom  oral_2550_map.txt  skin_1975_map.txt
shu-aging/.ipynb_checkpoints/: base-configure -checkpoint.json
shu-aging/gut/: model.keras
tests/gotu/data/: asv_test_table.biom  gotu_test_table.biom
