[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aam"
requires-python = ">= 3.9"
dynamic = ["version"]
description = "Deep Learning Method for Microbial Sequencing Data"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Kalen Cantrell", email = "kcantrel@ucsd.edu" },
    { name = "Jonathan Kirkland", email = "jokirkland@ucsd.edu" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "numpy",
    "pandas",
    "cython",
    "biom-format",
    "scikit-bio",
    "scikit-learn",
    "scipy",
    "unifrac",
    "click"
]

[project.scripts]
aam-cli = "aam:attention_cli"

[project.urls]
"Bug Tracker" = "https://github.com/kwcantrell/attention-all-microbes/issues"
"Source Code" = "https://github.com/kwcantrell/attention-all-microbes"

[tool.setuptools.packages.find]
where = ["aam"]

[tool.setuptools]
package-dir = {"" = "aam"}

[project.optional-dependencies]
dev = ["pytest", "ruff"]
docs = ["sphinx", "myst-parser"]

[tool.ruff]
line-length = 128
ignore = ["F841", "F401"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"
