[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "aam"
requires-python = ">=3.9"
dynamic = ["version"]
description = "Deep Learning Method for Microbial Sequencing Data"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Kalen Cantrell", email = "kcantrel@ucsd.edu" },
    { name = "Jonathan Kirkland", email = "jokirkland@ucsd.edu" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "numpy",
    "pandas",
    "cython",
    "seaborn",
    "biom-format",
    "scikit-bio >= 0.6.0",
    "scikit-learn",
    "scipy >= 1.13.0",
    "unifrac",
    "click",
    "iow",
    "tensorflow == 2.14.0",
    "tf-models-official == 2.14.2",
    "tensorboard"

]

[project.scripts]
attention = "aam.attention_cli:main"

[project.urls]
"Bug Tracker" = "https://github.com/kwcantrell/attention-all-microbes/issues"
"Source Code" = "https://github.com/kwcantrell/attention-all-microbes"


[tool.setuptools]
packages = ["aam"]

[tool.setuptools.packages.find]
where = ["aam"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
docs = ["sphinx", "myst-parser"]

[tool.ruff]
line-length = 128
ignore = ["F841", "F401"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"
